Change JSON::Any to JSON::Any?

--- a/.post_process.yml
+++ b/.post_process.yml
@@ -28,7 +28,7 @@ tasks:
       -
         name: 'Correct JSON::Any?'
         pattern: 'JSON::Any\?'
-        new_value: 'JSON::Any'
+        new_value: 'JSON::Any?'
       -
         name: 'Correct Stripe::String'
         pattern: 'Stripe::String'
