Add reference  to missing symbols issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,5 @@ jobs:
     - name: Install dependencies
       run: shards install
     - name: Run tests
+      # Test with release build due to: https://github.com/crystal-lang/crystal/issues/13193
       run: crystal spec --release
